...
                                <rect key="frame" x="0.0" y="420" width="320" height="60"/>
                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="p58-iB-tX8"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="Next Photo">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="tapNextPhotoButton:" destination="h5O-LT-15I" eventType="touchUpInside" id="9mw-Q9-rFS"/>
                                </connections>
                            </button>
...
