...
                                        <rect key="frame" x="160" y="0.0" width="160" height="60"/>
                                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="nKg-wl-dwf"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                        <state key="normal" title="Next">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="tapButton:" destination="0UO-ne-XNt" eventType="touchUpInside" id="c00-0n-YjP"/>
                                        </connections>
                                    </button>
...
